--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "build": "vite build"
+    "build": "echo \"No build step required for backend\""
   },
   "keywords": [],
   "author": "",
